# langchain_study

./: README.md  pyproject.toml  python_environment_check.py  requirements.txt  web_scraping01.ipynb  web_scraping02.ipynb
00.samples/: sample_llm.ipynb  sample_markdown.ipynb
01.web_scraping/: web_explorer.py  web_scraping01.ipynb  web_scraping02.ipynb
02.chatbot/: chatbot_langchain_file_hf_chroma_openai_rag.py  chatbot_langchain_file_hf_chroma_openai_rag02.py  chatbot_langchain_streamlit_openai.py  chatbot_langchain_textfile_hf_chroma_openai_rag.py
04.pdf/: pdf_langchain_streamlit_pypdf2_rag.py  pdf_langchain_streamlit_pypdf_rag02.py
05.translate/: translate_langchain_streamlit_openai.py
06.email/: email_langchain_streamlit.py
07.data_analysis/: data_analysys_csv.ipynb
08.langgraph/: app.py
10x_aiclub/: langchain_upstage01_simple_llm.py  langchain_upstage02_chatbot.py
99.functions/: python_environment_check.ipynb
db/chroma_db_oai/: chroma.sqlite3
rooftop/: agent1.sqlite  langchain_tutorial04_agent.py  langchain_tutorial05.ipynb  langchain_tutorial_01.py  langchain_tutorial_02.py  langchain_tutorial_03.ipynb
teddy_note/: b25.py  langchain_retriever_bm25.ipynb
